# aml

./: CMakeLists.txt  example.cpp  makefile  readme.md  test.cpp
.github/workflows/: ci.yml
benches/: CMakeLists.txt  bench_cpu.cpp  bench_gpu.cpp
docs/: library.md
docs/dependencies/: cublas-install.md  openblas-install.md
docs/groups/: linalg.md  memory.md  nn.md  random.md  stats.md  tensor.md
include/: aml.hpp  cpu.hpp  cpustats.hpp  gpu.hpp  gpustats.hpp  statlib.hpp
include/aml/: aml.hpp  cpu.hpp
src/: cpu.cpp  cpustats.cpp  gpu.cpp  gpu.cu  gpustats.cpp
tests/: CMakeLists.txt  test_cpu.cpp  test_gpu.cpp
